Show sharable link

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,9 @@ html
       .row
         .col-xs-12
           .panel.panel-default
+            .share-link
+              h2 Share this link
+              input.link
             .panel-body
               h2 File Uploader
               h4 Upload your files guv'na!
