--- a/views/download.jade
+++ b/views/download.jade
@@ -4,8 +4,8 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Upload a file
-    link(href='https://fonts.googleapis.com/css?family=Raleway', rel='stylesheet', type='text/css')
+    title Download your file
+    link(href='https://fonts.googleapis.com/css?family=Varela+Round', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(href='/stylesheets/style.css', rel='stylesheet')
   body
@@ -15,7 +15,7 @@ html
           .panel.panel-default
             .panel-body
               h2 Click to download file
-              h4 Once you download this file, it will be permanantly deleted
+              h4 Once you download this file, it will be permanently deleted
               button.btn.btn-lg.download-btn(type='button') Download File
     input(type='hidden', value='#{hash}', id='hash')
     script(src='https://code.jquery.com/jquery-2.2.0.min.js')
