--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,27 @@ a {
   display: none;
 }
 
+.downloading {
+  display: none;
+}
+
+.clip {
+  height: 16px;
+}
+
+.copied {
+  display: none;
+  border-radius: 3px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  opacity: 0.7;
+  padding: 7px;
+  position: absolute;
+  top: 45px;
+  right: -11px;
+}
+
 .btn:focus, .upload-btn:focus{
   outline: 0;
 }
@@ -49,7 +70,7 @@ h4 {
 
 h2 {
   margin-top: 15px;
-  color: black;
+  color: rgba(0, 0, 0, 0.88);
 }
 
 .panel {
@@ -61,6 +82,24 @@ h2 {
 
 .share-link {
   display: none;
+}
+
+.link {
+  height: 40px;
+  font-size: 15px;
+  width: 50%;
+  text-align: center;
+  outline: 0;
+  border: 1px solid #ddd;
+}
+
+.btn.clip-btn {
+  height: 40px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  position: relative;
+  top: -1px;
+  right: 1px;
 }
 
 .main-container {
