--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   background-color: #d63585;
+  background-color: #ffebeb;
   text-align: center;
 }
 
@@ -77,7 +78,9 @@ h2 {
   height: 96vh;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: #ffeadb;
+  background-color: #ffebeb;
+  background-color: white;
+  opacity: 0.9;
 }
 
 .share-link {
