--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,10 @@ html
           .panel.panel-default
             .share-link
               h2 Share this link
-              h4 Note that once this file is downloaded, it will be deleted forever
+              h4
+                | Once this file is downloaded, it will be securely
+                b &nbsp;deleted forever.&nbsp;
+                | This link will expire in 48 hours.
               input.link
               button.btn.clip-btn(data-clipboard-target='.link')
                 img.clip(src='images/clippy.svg', alt='Copy to clipboard')
